# sviz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PRD.md  README.md
scripts/: build_all.sh  configure_native.sh  configure_wasm.sh  env.sh  send_monitor_example.py  setup_tools.sh
src/: sviz_mesh_binary.hpp  sviz_monitor_client.hpp  sviz_server.cpp  sviz_smesh_monitor_client.hpp  sviz_wasm.cpp
tests/: sviz_monitor_client_compile.cpp  sviz_smesh_monitor_client_compile.cpp
web/: app.js  index.html  monitor.html  monitor.js  viewer.js
